force-app/main/default/objects/WO_Status_Mapping__mdt/WO_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps each Work_Order__c Status__c value to an open/terminal bucket and a simplified display stage for lifecycle steppers. Finance and ops can change the mapping here without code changes.</description>
    <label>WO Status Mapping</label>
    <pluralLabel>WO Status Mappings</pluralLabel>
</CustomObject>