force-app/main/default/objects/WO_Status_Mapping__mdt/fields/Display_Stage__c.field-meta.xml
<CustomField>
    <fullName>Display_Stage__c</fullName>
    <description>Simplified stepper stage shown on the Work Order execution page. One of: Setup, Scheduled, In Progress, Closeout, Closed, Cancelled. Maps the ~36 Status values to the 6-step visual lifecycle.</description>
    <label>Display Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>