force-app/main/default/objects/WO_Status_Mapping__mdt/fields/Is_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Is_Terminal__c</fullName>
    <description>True = this status ends the work order lifecycle (counts as closed for KPI batch). False = still open and in-flight. Finance must approve the full mapping before the batch runs.</description>
    <defaultValue>false</defaultValue>
    <label>Is Terminal (Closed)</label>
    <type>Checkbox</type>
</CustomField>