force-app/main/default/objects/WO_Status_Mapping__mdt/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <description>Exact API value of Work_Order__c.Status__c that this record maps.</description>
    <label>Status Label</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>